2011-06-06  Karl Berry  <karl@tug.org>

	* doc/web2c.texi: update MetaPost description, .mem's are
	no longer created or used.

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../am/bin_links.am for $(bindir) links.

2011-05-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac (AC_CONFIG_FILES): Add otps/win32/Makefile.

2011-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h: Move generic_synctex_get_current_name() prototype
	from synctexdir/synctex-{,e,pdf,xe}tex.h to here.

2011-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* osx-strip: Removed.
	* configure.ac: Remove osx-strip.

2011-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* osx-strip: New shell script to strip Mac OS X binaries.
	* configure.ac: Use osx-strip for Mac OS X.

2011-05-05  Karl Berry  <karl@tug.org>

	* man/pktype.man: output is always to stdout.
	
	* doc/web2c.texi (Common option): -jobname can override recorder name.

2011-04-28  Karl Berry  <karl@tug.org>

	* doc/web2c.texi (Common options): caveats about the -recorder
	.fls file name not following the .log in unusual usage.
	Philipp Stephani, 21 Sep 2010 16:28:58, and my reply 28apr11.

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* cpascal.h: Define ucharcast().

	* bibtex.ch (pds_type): Do not declare as unsigned.
	(pre_define): Apply ucharcast() to xord[] index.

	* dvicopy.ch (comment): Do not declare as unsigned.
	(do_pre): Apply ucharcast() to xord[] index.

	* gftodvi.ch (start_gf): Do not declare arg_buffer as unsigned
	and apply ucharcast() to xord[] index.

	* mf.ch (MF_base_default): Do not declare as unsigned.
	(pack_buffered_name): Apply ucharcast() to xord[] index.
	(storebasefile, loadbasefile): cast base_engine to string.

	* tex.ch (TEX_format_default): Do not declare as unsigned.
	(pack_buffered_name): Apply ucharcast() to xord[] index.
	(storefmtfile, loadfmtfile): Cast format_engine to string.
